Adding new works

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -221,7 +221,7 @@
     "title": "Prestashop documentation",
     "href": "https://theme.bonpresta.com/documentation/",
     "image": "img/prestadoc-1.png",
-    "year": "2021"
+    "year": "2022"
   },
   {
     "month": "July",
@@ -230,5 +230,45 @@
     "href": "https://voitto.bontheme.com/documentation/",
     "image": "img/prestadoc-2.png",
     "year": "2022"
+  },
+  {
+    "month": "October",
+    "number": 23,
+    "title": "React Site",
+    "href": "https://dachev1919.github.io/gymReact/",
+    "image": "img/react-1.png",
+    "year": "2023"
+  },
+  {
+    "month": "November",
+    "number": 8,
+    "title": "React Site",
+    "href": "https://dachev1919.github.io/e-market/",
+    "image": "img/react-2.png",
+    "year": "2023"
+  },
+  {
+    "month": "November",
+    "number": 23,
+    "title": "React Site",
+    "href": "https://dachev1919.github.io/ecommerce-pizza/",
+    "image": "img/react-3.png",
+    "year": "2023"
+  },
+  {
+    "month": "December",
+    "number": 15,
+    "title": "React Site",
+    "href": "https://dachev1919.github.io/ecommerce-nft/",
+    "image": "img/react-4.png",
+    "year": "2023"
+  },
+  {
+    "month": "January",
+    "number": 18,
+    "title": "React Site",
+    "href": "https://dachev1919.github.io/ecommerce-tech/",
+    "image": "img/react-5.png",
+    "year": "2023"
   }
 ]
