Adding new works

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -234,7 +234,7 @@
   {
     "month": "October",
     "number": 23,
-    "title": "React Site",
+    "title": "React.js",
     "href": "https://dachev1919.github.io/gymReact/",
     "image": "img/react-1.png",
     "year": "2022"
@@ -242,7 +242,7 @@
   {
     "month": "November",
     "number": 8,
-    "title": "React Site",
+    "title": "React.js",
     "href": "https://dachev1919.github.io/e-market/",
     "image": "img/react-2.png",
     "year": "2022"
@@ -250,7 +250,7 @@
   {
     "month": "November",
     "number": 23,
-    "title": "React Site",
+    "title": "React.js",
     "href": "https://dachev1919.github.io/ecommerce-pizza/",
     "image": "img/react-3.png",
     "year": "2022"
@@ -258,7 +258,7 @@
   {
     "month": "December",
     "number": 15,
-    "title": "React Site",
+    "title": "React.js",
     "href": "https://dachev1919.github.io/ecommerce-nft/",
     "image": "img/react-4.png",
     "year": "2022"
@@ -266,7 +266,7 @@
   {
     "month": "January",
     "number": 18,
-    "title": "React Site",
+    "title": "React.js",
     "href": "https://dachev1919.github.io/ecommerce-tech/",
     "image": "img/react-5.png",
     "year": "2023"
