--- a/src/common/data/projects.json
+++ b/src/common/data/projects.json
@@ -286,5 +286,13 @@
     "href": "https://dachev1919.github.io/ecommerce-coffee/",
     "image": "img/react-7.png",
     "year": "2023"
+  },
+  {
+    "month": "March",
+    "number": 4,
+    "title": "React.js",
+    "href": "https://dachev1919.github.io/big-cinema/",
+    "image": "img/react-8.png",
+    "year": "2023"
   }
 ]
