--- a/src/common/data/projects.json
+++ b/src/common/data/projects.json
@@ -240,11 +240,19 @@
     "year": "2022"
   },
   {
+    "month": "October",
+    "number": 30,
+    "title": "React.js",
+    "href": "https://dachev1919.github.io/phone-store/",
+    "image": "img/react-2.png",
+    "year": "2022"
+  },
+  {
     "month": "November",
     "number": 8,
     "title": "React.js | Firebase | Redux-Toolkit",
     "href": "https://dachev1919.github.io/e-market/",
-    "image": "img/react-2.png",
+    "image": "img/react-3.png",
     "year": "2022"
   },
   {
@@ -252,7 +260,7 @@
     "number": 23,
     "title": "React.js | Redux-Toolkit | Bootstrap",
     "href": "https://dachev1919.github.io/ecommerce-pizza/",
-    "image": "img/react-3.png",
+    "image": "img/react-4.png",
     "year": "2022"
   },
   {
@@ -260,7 +268,7 @@
     "number": 15,
     "title": "React.js | Bootstrap",
     "href": "https://dachev1919.github.io/ecommerce-nft/",
-    "image": "img/react-4.png",
+    "image": "img/react-5.png",
     "year": "2022"
   },
   {
@@ -268,7 +276,7 @@
     "number": 18,
     "title": "React.js | Redux-Toolkit | Bootstrap",
     "href": "https://dachev1919.github.io/ecommerce-tech/",
-    "image": "img/react-5.png",
+    "image": "img/react-6.png",
     "year": "2023"
   },
   {
@@ -276,7 +284,7 @@
     "number": 12,
     "title": "React.js | Tailwind | Redux-Toolkit",
     "href": "https://dachev1919.github.io/conduit/",
-    "image": "img/react-6.png",
+    "image": "img/react-7.png",
     "year": "2023"
   },
   {
@@ -284,7 +292,7 @@
     "number": 26,
     "title": "React.js | Next.js | ChakraUI",
     "href": "https://dachev1919.github.io/ecommerce-coffee/",
-    "image": "img/react-7.png",
+    "image": "img/react-8.png",
     "year": "2023"
   },
   {
@@ -292,7 +300,7 @@
     "number": 4,
     "title": "React.js | Next.js | Tailwind",
     "href": "https://dachev1919.github.io/big-cinema/",
-    "image": "img/react-8.png",
+    "image": "img/react-9.png",
     "year": "2023"
   },
   {
@@ -300,7 +308,7 @@
     "number": 8,
     "title": "React.js | Tailwind",
     "href": "https://dachev1919.github.io/your-movie/",
-    "image": "img/react-9.png",
+    "image": "img/react-10.png",
     "year": "2023"
   }
 ]
