adding a new job

--- a/src/common/data/projects.json
+++ b/src/common/data/projects.json
@@ -310,5 +310,13 @@
     "href": "https://dachev1919.github.io/your-movie/",
     "image": "img/react-10.png",
     "year": "2023"
+  },
+  {
+    "month": "May",
+    "number": 10,
+    "title": "React.js",
+    "href": "https://dachev1919.github.io/yankee",
+    "image": "img/react-11.png",
+    "year": "2023"
   }
 ]
